--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-projectVersion=2.1.3-SNAPSHOT
-micronautVersion=1.3.5
+projectVersion=3.0.0-SNAPSHOT
+micronautVersion=2.2.0
+micronautTestVersion=2.2.1
 micronautBuildVersion=1.1.5
-micronautTestVersion=1.2.3
 micronautDocsVersion=1.0.23
-groovyVersion=2.5.11
-springVersion=5.2.9.RELEASE
-springBootVersion=2.3.4.RELEASE
+groovyVersion=3.0.3
+springVersion=5.3.1
+springBootVersion=2.4.0
 title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring 
 projectUrl=http://micronaut.io
@@ -13,12 +13,12 @@ githubSlug=micronaut-projects/micronaut-spring
 # This project's branch
 githubBranch=master
 # Micronaut core branch for BOM pull requests
-githubCoreBranch=2.0.x
+githubCoreBranch=2.1.x
 bomProperty=micronautSpringVersion
 # If needed, set additional properties
 bomProperties=springVersion,springBootVersion
 junitVersion=5.1.0
-spockVersion=1.3-groovy-2.5
+spockVersion=2.0-M2-groovy-3.0
 developers=Graeme Rocher
 # Needed only for documentation
 grailsVersion=3.3.8
