--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -3,7 +3,9 @@ dependencies {
     api "org.springframework:spring-context:$springVersion"
     api "io.micronaut:micronaut-aop:$micronautVersion"
     api "io.micronaut:micronaut-inject:$micronautVersion"
+
     implementation project(":spring")
+    implementation "io.micronaut.cache:micronaut-cache-core"
 
     testImplementation "io.micronaut:micronaut-runtime:$micronautVersion"
     testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
@@ -15,5 +17,4 @@ dependencies {
     if(!JavaVersion.current().isJava9Compatible()) {
         testImplementation files(org.gradle.internal.jvm.Jvm.current().toolsJar)
     }
-
 }
