--- a/spring-web/build.gradle
+++ b/spring-web/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     api 'io.projectreactor:reactor-core:3.3.10.RELEASE'
     implementation "io.micronaut:micronaut-http:$micronautVersion"
     compileOnly "io.micronaut:micronaut-http-server-netty"
-    compileOnly "io.micronaut:micronaut-views-core"
+    compileOnly "io.micronaut.views:micronaut-views-core"
 
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
     testAnnotationProcessor project(":spring-annotation")
@@ -15,7 +15,10 @@ dependencies {
     testImplementation "io.micronaut:micronaut-validation"
     testImplementation "io.micronaut:micronaut-http-client"
     testImplementation "io.micronaut:micronaut-http-server-netty"
-    testRuntimeOnly "io.micronaut:micronaut-views-thymeleaf"
+    testRuntimeOnly "io.micronaut.views:micronaut-views-thymeleaf"
     testRuntimeOnly("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion")
 
 }
+
+//compileTestJava.options.fork = true
+//compileTestJava.options.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
