Use new Gradle build plugins

--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,19 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url "https://dl.bintray.com/micronaut/core-releases-local" }
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "io.micronaut.build:micronaut-gradle-plugins:2.0.16"
+        classpath "io.micronaut.build.internal:micronaut-gradle-plugins:3.0.1"
     }
 }
 
 subprojects { Project subproject ->
     group "io.micronaut.spring"
 
-    apply plugin: "io.micronaut.build.common"
+    apply plugin: "io.micronaut.build.internal.common"
 
-    apply plugin: "io.micronaut.build.dependency-updates"
-    apply plugin: "io.micronaut.build.publishing"
+    apply plugin: "io.micronaut.build.internal.dependency-updates"
+    apply plugin: "io.micronaut.build.internal.publishing"
 
     dependencies {
         testImplementation("org.spockframework:spock-core:${spockVersion}") {
@@ -43,5 +41,5 @@ subprojects { Project subproject ->
     }
 }
 
-apply plugin: "io.micronaut.build.docs"
-apply plugin: "io.micronaut.build.dependency-updates"
+apply plugin: "io.micronaut.build.internal.docs"
+apply plugin: "io.micronaut.build.internal.dependency-updates"
