micronaut-cache-core

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 projectVersion=3.1.1-SNAPSHOT
-micronautDocsVersion=1.0.25
+micronautDocsVersion=2.0.0.RC1
 micronautVersion=2.3.0
 micronautTestVersion=2.3.3
 
@@ -8,10 +8,10 @@ spockVersion=2.0-M3-groovy-3.0
 
 springVersion=5.3.1
 springBootVersion=2.4.0
-junitVersion=5.1.0
+junitVersion=5.7.0
 
 title=Micronaut for Spring
-projectDesc=Extensions to integrate Micronaut and Spring 
+projectDesc=Extensions to integrate Micronaut and Spring
 projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
 developers=Graeme Rocher
