fix broken links

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ githubCoreBranch=2.3.x
 bomProperty=micronautSpringVersion
 bomProperties=springVersion,springBootVersion
 
-springapi=https://docs.spring.io/spring-framework/docs/current/javadoc-api
 springbootapi=https://docs.spring.io/spring-boot/docs/current/api
-micronautapi=https://docs.micronaut.io/latest/api
+micronautcache=https://micronaut-projects.github.io/micronaut-cache/latest/api/io/micronaut/cache/
+micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
+
