--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
-projectVersion=3.1.1-SNAPSHOT
+projectVersion=4.0.0-SNAPSHOT
 micronautDocsVersion=2.0.0.RC1
-micronautVersion=2.3.0
-micronautTestVersion=2.3.3
+micronautVersion=3.0.0-SNAPSHOT
+micronautTestVersion=3.0.0-RC1
+micronautCacheVersion=3.0.0-RC2
 
-groovyVersion=3.0.5
-spockVersion=2.0-M3-groovy-3.0
+groovyVersion=3.0.8
+spockVersion=2.0-groovy-3.0
 
-springVersion=5.3.1
-springBootVersion=2.4.0
+springVersion=5.3.9
+springBootVersion=2.5.3
 junitVersion=5.7.0
 
 title=Micronaut for Spring
@@ -16,7 +17,7 @@ projectUrl=http://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
 developers=Graeme Rocher
 
-githubCoreBranch=2.3.x
+githubCoreBranch=3.0.x
 bomProperty=micronautSpringVersion
 bomProperties=springVersion,springBootVersion
 
