--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,11 @@
-rootProject.name = 'spring'
+rootProject.name = "spring"
 
-include 'spring'
-include 'spring-annotation'
+include "spring"
+include "spring-annotation"
 include "spring-boot-annotation"
 include "spring-boot"
-include 'spring-web-annotation'
-include 'spring-web'
+include "spring-web-annotation"
+include "spring-web"
 include "spring-context"
+
+include "test-suite"
