--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=4.0.0-SNAPSHOT
 micronautDocsVersion=2.0.0.RC1
-micronautVersion=3.0.0-SNAPSHOT
+micronautVersion=3.0.0-M4
 micronautTestVersion=3.0.0-RC1
 micronautCacheVersion=3.0.0-RC2
 
