--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 projectVersion=4.0.1-SNAPSHOT
-micronautDocsVersion=2.0.0.RC1
-micronautVersion=3.0.0-RC1
-micronautTestVersion=3.0.0-RC1
-micronautCacheVersion=3.0.0-RC2
+micronautDocsVersion=2.0.0
+micronautVersion=3.0.1
+micronautTestVersion=3.0.2
+micronautCacheVersion=3.0.0
 
-groovyVersion=3.0.8
+groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
 
 springVersion=5.3.9
@@ -13,7 +13,7 @@ junitVersion=5.7.0
 
 title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring
-projectUrl=http://micronaut.io
+projectUrl=https://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
 developers=Graeme Rocher
 
@@ -24,4 +24,3 @@ bomProperties=springVersion,springBootVersion
 springbootapi=https://docs.spring.io/spring-boot/docs/current/api
 micronautcache=https://micronaut-projects.github.io/micronaut-cache/latest/api/io/micronaut/cache/
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
-
