--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,14 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
+plugins {
+    id 'io.micronaut.build.shared.settings' version '4.2.6'
+}
+
 rootProject.name = "spring"
 
 include "spring"
