--- a/spring-annotation/build.gradle
+++ b/spring-annotation/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "io.micronaut.build.internal.module"
+}
+
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     api "io.micronaut:micronaut-inject:$micronautVersion"
@@ -11,6 +15,8 @@ dependencies {
     testImplementation project(":spring")
     testImplementation "org.springframework:spring-tx"
 }
+
+group "io.micronaut.spring"
 
 compileTestGroovy.options.forkOptions.jvmArgs =['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
 compileTestGroovy.options.fork=true
