--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "io.micronaut.build.internal.module"
+}
+
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
     api project(":spring-context")
@@ -17,3 +21,5 @@ dependencies {
     testRuntimeOnly "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
     testRuntimeOnly "org.springframework.boot:spring-boot-starter-tomcat:$springBootVersion"
 }
+
+group "io.micronaut.spring"
