--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,13 @@
 projectVersion=4.0.2-SNAPSHOT
+projectGroup=io.micronaut.spring
 micronautDocsVersion=2.0.0
-micronautVersion=3.2.0
-micronautTestVersion=3.0.2
-micronautCacheVersion=3.0.0
-
+micronautVersion=3.2.3
+micronautTestVersion=3.0.5
 groovyVersion=3.0.9
 spockVersion=2.0-groovy-3.0
 
 springVersion=5.3.9
 springBootVersion=2.5.3
-junitVersion=5.8.1
 
 title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring
@@ -17,7 +15,7 @@ projectUrl=https://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
 developers=Graeme Rocher
 
-githubCoreBranch=3.0.x
+githubCoreBranch=3.2.x
 bomProperty=micronautSpringVersion
 bomProperties=springVersion,springBootVersion
 
