--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -1,28 +1,26 @@
 import org.gradle.internal.jvm.Jvm
 
 plugins {
-    id "io.micronaut.build.internal.module"
+    id 'io.micronaut.build.internal.spring-module'
 }
 
 dependencies {
-    annotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
-    api "org.springframework:spring-context:$springVersion"
-    api "io.micronaut:micronaut-aop:$micronautVersion"
-    api "io.micronaut:micronaut-inject:$micronautVersion"
+    annotationProcessor mn.micronaut.inject.java
+    api libs.spring.context
+    api mn.micronaut.aop
+    api mn.micronaut.inject
 
-    implementation project(":spring")
-    implementation "io.micronaut.cache:micronaut-cache-core:$micronautCacheVersion"
+    implementation projects.spring
+    implementation libs.micronaut.cache
 
-    testImplementation "io.micronaut:micronaut-runtime:$micronautVersion"
-    testAnnotationProcessor "io.micronaut:micronaut-inject-java:$micronautVersion"
-    testAnnotationProcessor project(":spring-annotation")
+    testImplementation mn.micronaut.runtime
+    testAnnotationProcessor mn.micronaut.inject.java
+    testAnnotationProcessor projects.springAnnotation
 
-    testImplementation "io.micronaut:micronaut-inject-java:$micronautVersion"
-    testImplementation  project(":spring-annotation")
-    testImplementation "io.micronaut:micronaut-inject-java-test:$micronautVersion"
+    testImplementation mn.micronaut.inject.java
+    testImplementation  projects.springAnnotation
+    testImplementation mn.micronaut.inject.java.test
     if (!JavaVersion.current().isJava9Compatible()) {
         testImplementation files(Jvm.current().toolsJar)
     }
 }
-
-group "io.micronaut.spring"
