--- a/settings.gradle
+++ b/settings.gradle
@@ -6,13 +6,14 @@ pluginManagement {
 }
 
 plugins {
-    id 'io.micronaut.build.shared.settings' version '5.1.2'
+    id 'io.micronaut.build.shared.settings' version '5.1.3'
 }
 
 rootProject.name = 'micronaut-spring'
 
 include 'spring'
 include 'spring-annotation'
+include 'spring-bom'
 include 'spring-boot-annotation'
 include 'spring-boot'
 include 'spring-web-annotation'
