--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ rootProject.name = 'micronaut-spring'
 
 include 'spring'
 include 'spring-annotation'
+include 'spring-bom'
 include 'spring-boot-annotation'
 include 'spring-boot'
 include 'spring-web-annotation'
