build: update build plugin to 5.2.3
rename root project name to -parent

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,10 +6,10 @@ pluginManagement {
 }
 
 plugins {
-    id 'io.micronaut.build.shared.settings' version '5.2.2'
+    id 'io.micronaut.build.shared.settings' version '5.2.3'
 }
 
-rootProject.name = 'micronaut-spring'
+rootProject.name = 'spring-parent'
 
 include 'spring'
 include 'spring-annotation'
