--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -3,21 +3,19 @@ plugins {
 }
 
 dependencies {
-    annotationProcessor mn.micronaut.inject.java
-
-    api libs.spring.core
-    api libs.spring.tx
-    api libs.spring.context
+    api libs.managed.spring
+    api libs.managed.spring.tx
+    api libs.managed.spring.context
     api mn.micronaut.inject
     api mn.micronaut.aop
 
-    compileOnly libs.spring.jdbc
+    compileOnly libs.managed.spring.jdbc
     compileOnly mn.micronaut.test.core
 
     testAnnotationProcessor mn.micronaut.inject.java
     testImplementation mn.micronaut.runtime
     testCompileOnly mn.micronaut.inject.groovy
 
-    testImplementation "org.spockframework:spock-spring:$spockVersion"
+    testImplementation libs.spock.spring
     testImplementation libs.spring.test
 }
