--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,12 +10,14 @@ managed-spring-boot = { module = 'org.springframework.boot:spring-boot', version
 managed-spring-boot-starter = { module = 'org.springframework.boot:spring-boot-starter', version.ref = 'managed-spring-boot' }
 managed-spring-boot-starter-web = { module = 'org.springframework.boot:spring-boot-starter-web', version.ref = 'managed-spring-boot' }
 
-managed-spring = { module = 'org.springframework:spring-core', version.ref = 'managed-spring' }
-managed-spring-context = { module = 'org.springframework:spring-context', version.ref = 'managed-spring' }
-managed-spring-tx = { module = 'org.springframework:spring-tx', version.ref = 'managed-spring' }
-managed-spring-orm = { module = 'org.springframework:spring-orm', version.ref = 'managed-spring' }
-managed-spring-jdbc = { module = 'org.springframework:spring-jdbc', version.ref = 'managed-spring' }
-managed-spring-web = { module = 'org.springframework:spring-web', version.ref = 'managed-spring' }
+
+boms-spring = { module = 'org.springframework:spring-framework-bom', version.ref = 'managed-spring' }
+spring-core = { module = 'org.springframework:spring-core' }
+spring-context = { module = 'org.springframework:spring-context' }
+spring-tx = { module = 'org.springframework:spring-tx' }
+spring-orm = { module = 'org.springframework:spring-orm' }
+spring-jdbc = { module = 'org.springframework:spring-jdbc' }
+spring-web = { module = 'org.springframework:spring-web' }
 
 spring-boot-actuator = { module = 'org.springframework.boot:spring-boot-actuator', version.ref = 'managed-spring-boot' }
 spring-boot-autoconfigure = { module = 'org.springframework.boot:spring-boot-autoconfigure', version.ref = 'managed-spring-boot' }
