--- a/spring-annotation/build.gradle
+++ b/spring-annotation/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    api(platform(libs.boms.spring))
     api mn.micronaut.inject
     api mn.micronaut.aop
     api mn.micronaut.validation
@@ -14,7 +15,7 @@ dependencies {
     testAnnotationProcessor mn.micronaut.inject.java
     testImplementation mn.micronaut.inject.groovy
     testImplementation projects.spring
-    testImplementation libs.managed.spring.tx
+    testImplementation libs.spring.tx
 }
 
 compileTestGroovy.options.forkOptions.jvmArgs =['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
