--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 dependencies {
-    api libs.managed.spring.context
+    api libs.spring.context
     api mn.micronaut.aop
     api mn.micronaut.inject
 
