--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -3,8 +3,6 @@ plugins {
 }
 
 dependencies {
-    annotationProcessor mn.micronaut.inject.java
-
     api libs.spring.core
     api libs.spring.tx
     api libs.spring.context
@@ -18,6 +16,6 @@ dependencies {
     testImplementation mn.micronaut.runtime
     testCompileOnly mn.micronaut.inject.groovy
 
-    testImplementation "org.spockframework:spock-spring:$spockVersion"
+    testImplementation libs.spock.spring
     testImplementation libs.spring.test
 }
