--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ projectVersion=4.2.0-SNAPSHOT
 projectGroup=io.micronaut.spring
 
 micronautDocsVersion=2.0.0
-micronautVersion=3.5.3
+micronautVersion=3.6.0-SNAPSHOT
 micronautTestVersion=3.3.0
 
 groovyVersion=3.0.10
