--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,13 @@ plugins {
     id 'io.micronaut.build.shared.settings' version '5.3.10'
 }
 
+dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+        maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    }
+}
+
 rootProject.name = 'spring-parent'
 
 include 'spring'
